--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ height: 30px;background-color:#44c767;
 
     <div id="map"><p id ="idp2">This is some text in a paragraph.</p></div>
     <div id="controls">
-      <div>Click the map.</div>
+      <div></div>
       <input type="checkbox" id="geodesic">
       
 
