--- a/index.html
+++ b/index.html
@@ -37,20 +37,21 @@ box-shadow: 5px 5px 15px 5px #20A4FF;
         }
 
 
-      #idbtrefres {
-width: 30px;
-height: 30px;background-color:#44c767;
-	-moz-border-radius:42px;
-	-webkit-border-radius:42px;
- 
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:10px;
 
-	text-decoration:none;
-	text-shadow:0px 0px 24px #2f6627;
+      #idbtinfo {
+width: 50px;
+height: 50px;background-color:#44c767;
+  -moz-border-radius:42px;
+  -webkit-border-radius:42px;
+ 
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:20px;
+
+  text-decoration:none;
+  text-shadow:0px 0px 24px #ff5722;
 
   border-radius: 50%;
   text-align: center;
@@ -63,11 +64,56 @@ height: 30px;background-color:#44c767;
   box-shadow: -1px 20px 15px 5px rgba(0,0,0,0.78);
 }
 
+      #idbtrefres {
+width: 50px;
+height: 50px;background-color:#44c767;
+	-moz-border-radius:42px;
+	-webkit-border-radius:42px;
+ 
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+
+	text-decoration:none;
+	text-shadow:0px 0px 24px #2f6627;
+
+  border-radius: 50%;
+  text-align: center;
+  position: absolute;
+  top: 470px;
+  left: 10px;
+  z-index: 300;
+
+  -webkit-box-shadow: -1px 20px 15px 5px rgba(0,0,0,0.78); 
+  box-shadow: -1px 20px 15px 5px rgba(0,0,0,0.78);
+}
+#idpinforme{
+
+          z-index:  2223;
+          -webkit-box-shadow: 5px 5px 15px 5px #20A4FF; 
+box-shadow: 5px 5px 15px 5px #20A4FF;
+          font-family: Georgia, serif;
+          font-size: 15px;
+          letter-spacing: 2px;
+          word-spacing: 2px;
+          color: rgb(0, 204, 255);
+          font-weight: normal;
+          text-decoration: none;
+          font-style: normal;
+          font-variant: normal;
+          text-transform: none;
+          position: absolute;
+top: 750px;
+
+
+}
 
 
      </style>
   <meta charset="UTF-8">
-  <title>Calm breeze login screen</title>
+  <title>Sitcaruser</title>
   
   
   
@@ -135,10 +181,15 @@ height: 30px;background-color:#44c767;
 
 </script>
 
- <button id ="idbtrefres" class="butn" onclick="activar()">inicio</button>
+ <button id ="idbtrefres" class="butn" onclick="activar()">inicio</button><br><br><br>
+  <button id ="idbtinfo" class="butn" onclick="imprimir()">informe</button>
 <br><p></p><br>
     
-  <br><div id ="dividp" ></div><p id ="idp">This is some text in a paragraph.</p></div>
+  <br><div id ="dividp" ></div><p id ="idp">This is some text in a paragraph.</p>
+
+<p id ="idpinforme">This is some text in a paragraph.</p>
+
+</div>
     
     <script>
       var w = window.innerWidth;
@@ -148,7 +199,11 @@ document.getElementById("idbtrefres").style.display = "none";
 
       document.getElementById("idp").style.display = "none";
   document.getElementById("map").style.display = "none";
-  document.getElementById("didivdp").style.display = "none";
+  //document.getElementById("didivdp").style.display = "none";
+  document.getElementById("idpinforme").style.display = "none";
+   document.getElementById("idbtinfo").style.display = "none";
+
+  
     </script>
     <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
 
