--- a/index.html
+++ b/index.html
@@ -95,16 +95,19 @@ height: 50px;background-color:#44c767;
           -webkit-box-shadow: 5px 5px 15px 5px #20A4FF; 
 box-shadow: 5px 5px 15px 5px #20A4FF;
           font-family: Georgia, serif;
-          font-size: 15px;
+          font-size: 18px;
           letter-spacing: 2px;
           word-spacing: 2px;
-          color: rgb(0, 204, 255);
+        color:#000000;
           font-weight: normal;
           text-decoration: none;
           font-style: normal;
           font-variant: normal;
           text-transform: none;
           position: absolute;
+          background: #fffeff;
+          opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */
 top: 750px;
 
 
