--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@ top: 750px;
 
 </script>
 
- <button id ="idbtrefres" class="butn" onclick="activar()">inicio</button><br><br><br>
-  <button id ="idbtinfo" class="butn" onclick="imprimir()">informe</button>
+ <button id ="idbtrefres" class="butn" onclick="activar2()">Buscar</button><br><br><br>
+  <button id ="idbtinfo" class="butn" onclick="imprimir()">Guardar</button>
 <br><p></p><br>
     
   <br><div id ="dividp" ></div><p id ="idp">This is some text in a paragraph.</p>
