--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ top: 750px;
 
 
 			<button onclick="activar()">Activar GPS</button> <br>
-			<button onclick="login()">Ver Mapa</button> 
+			<button onclick="activar()">Ver Mapa</button> 
     </div>
 	</div>
 	
