--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ top: 750px;
 
   <div id="idlog" class="wrapper">
 	<div class="container">
-		<h1 id="ih1">Sitcaruser</h1>
+		<h1 id="idh1">Sitcaruser</h1>
 		
 		<div id="idlog" class="form" action="" method="">	
 			<input id="idemail" type="text" placeholder="Username">
