--- a/index.html
+++ b/index.html
@@ -112,7 +112,35 @@ top: 750px;
 
 
 }
+#idn{
 
+  width: 100%;
+  height: 800px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+background-color: #0FE7F3;
+ opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */
+
+
+
+  /*IMPORTANTE*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+#idn1{
+
+    background-color: #FFFFFF;
+  color: #000000;
+  border: 10px solid #6D6D6D;
+  font-family: 'times new roman';
+  font-style: oblique;
+  font-weight: lighter;
+  font-size: 19px;
+}
 
      </style>
   <meta charset="UTF-8">
@@ -194,6 +222,10 @@ top: 750px;
 
 </div>
     
+<div id="idn"><div id="idn1">
+  Porfavor espera se estan activando los satelites gps...
+
+</div></div>
     <script>
       var w = window.innerWidth;
 var h = window.innerHeight;
@@ -205,7 +237,7 @@ document.getElementById("idbtrefres").style.display = "none";
   //document.getElementById("didivdp").style.display = "none";
   document.getElementById("idpinforme").style.display = "none";
    document.getElementById("idbtinfo").style.display = "none";
-
+   document.getElementById("idn").style.display = "none";
   
     </script>
     <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
@@ -219,7 +251,6 @@ document.getElementById("idbtrefres").style.display = "none";
     </script>
    
     </script>
-
 
 
 
