--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ background-color: #0FE7F3;
     <script>
       var w = window.innerWidth;
 var h = window.innerHeight;
-
+document.getElementById("idn").style.height = String(h)+"px";
 document.getElementById("idbtrefres").style.display = "none";
 
       document.getElementById("idp").style.display = "none";
@@ -237,7 +237,7 @@ document.getElementById("idbtrefres").style.display = "none";
   //document.getElementById("didivdp").style.display = "none";
   document.getElementById("idpinforme").style.display = "none";
    document.getElementById("idbtinfo").style.display = "none";
-   document.getElementById("idn").style.display = "none";
+ document.getElementById("idn").style.display = "none";
   
     </script>
     <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
