--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ box-shadow: 5px 5px 15px 5px #20A4FF;
       #idbtinfo {
 width: 50px;
 height: 50px;background-color:#44c767;
-  -moz-border-radius:42px;
-  -webkit-border-radius:42px;
+  -moz-border-radius:90px;
+  -webkit-border-radius:90px;
  
   display:inline-block;
   cursor:pointer;
@@ -62,13 +62,23 @@ height: 50px;background-color:#44c767;
 
   -webkit-box-shadow: -1px 20px 15px 5px rgba(0,0,0,0.78); 
   box-shadow: -1px 20px 15px 5px rgba(0,0,0,0.78);
+
+
+  background-color: #FFFFFF;
+  color: #000000;
+  border: 10px solid #6D6D6D;
+  font-family: 'times new roman';
+  font-style: oblique;
+  font-weight: lighter;
+  font-size: 24px;
+
 }
 
       #idbtrefres {
 width: 50px;
 height: 50px;background-color:#44c767;
-	-moz-border-radius:42px;
-	-webkit-border-radius:42px;
+	-moz-border-radius:90px;
+	-webkit-border-radius:90px;
  
 	display:inline-block;
 	cursor:pointer;
@@ -88,6 +98,14 @@ height: 50px;background-color:#44c767;
 
   -webkit-box-shadow: -1px 20px 15px 5px rgba(0,0,0,0.78); 
   box-shadow: -1px 20px 15px 5px rgba(0,0,0,0.78);
+
+    background-color: #FFFFFF;
+  color: #000000;
+  border: 10px solid #6D6D6D;
+  font-family: 'times new roman';
+  font-style: oblique;
+  font-weight: lighter;
+  font-size: 24px;
 }
 #idpinforme{
 
