--- a/index.html
+++ b/index.html
@@ -39,21 +39,19 @@ box-shadow: 5px 5px 15px 5px #20A4FF;
 
 
       #idbtinfo {
-width: 50px;
-height: 50px;background-color:#44c767;
-  -moz-border-radius:90px;
-  -webkit-border-radius:90px;
- 
+background-color:#44c767;
+  -moz-border-radius:28px;
+  -webkit-border-radius:28px;
+  border-radius:28px;
+  border:1px solid #18ab29;
   display:inline-block;
   cursor:pointer;
   color:#ffffff;
   font-family:Arial;
-  font-size:20px;
-
+  font-size:17px;
+  padding:16px 31px;
   text-decoration:none;
-  text-shadow:0px 0px 24px #ff5722;
-
-  border-radius: 50%;
+  text-shadow:0px 1px 0px #2f6627;
   text-align: center;
   position: absolute;
   top: 380px;
@@ -70,26 +68,24 @@ height: 50px;background-color:#44c767;
   font-family: 'times new roman';
   font-style: oblique;
   font-weight: lighter;
-  font-size: 24px;
+  font-size: 14px;
 
 }
 
       #idbtrefres {
-width: 50px;
-height: 50px;background-color:#44c767;
-	-moz-border-radius:90px;
-	-webkit-border-radius:90px;
- 
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:20px;
-
-	text-decoration:none;
-	text-shadow:0px 0px 24px #2f6627;
-
-  border-radius: 50%;
+background-color:#44c767;
+  -moz-border-radius:28px;
+  -webkit-border-radius:28px;
+  border-radius:28px;
+  border:1px solid #18ab29;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:17px;
+  padding:16px 31px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #2f6627;
   text-align: center;
   position: absolute;
   top: 470px;
@@ -105,7 +101,7 @@ height: 50px;background-color:#44c767;
   font-family: 'times new roman';
   font-style: oblique;
   font-weight: lighter;
-  font-size: 24px;
+  font-size: 14px;
 }
 #idpinforme{
 
@@ -206,7 +202,7 @@ background-color: #0FE7F3;
 
 
 
-	<script src="https://js.arcgis.com/3.25/"></script>
+
 
 
     <div id="map"><p id ="idp2">This is some text in a paragraph.</p></div>
@@ -258,7 +254,7 @@ document.getElementById("idbtrefres").style.display = "none";
  document.getElementById("idn").style.display = "none";
   
     </script>
-    <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+   
 
     
 
