--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ top: 750px;
   position: absolute;
   top: 0px;
   left: 0px;
-background-color: #0FE7F3;
+background-color: #082B2D;
  opacity: 0.5;
     filter: alpha(opacity=50); /* For IE8 and earlier */
 
@@ -162,6 +162,14 @@ background-color: #0FE7F3;
   font-style: oblique;
   font-weight: lighter;
   font-size: 19px;
+
+
+
+
+
+
+
+  
 }
 
      </style>
