--- a/index.html
+++ b/index.html
@@ -161,7 +161,36 @@ width:4%;
 }
 
 
+#idbtotromap1{
 
+
+  text-align: center;
+  position: absolute;
+  top: 210px;
+  left: 110px;
+  z-index: 3000;
+
+  
+
+background-color:#44c767;
+  -moz-border-radius:28px;
+  -webkit-border-radius:28px;
+  border-radius:28px;
+  border:1px solid #18ab29;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:17px;
+  padding:16px 31px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #2f6627;
+
+
+width:4%; 
+
+
+}
 
 
 #idpinforme{
@@ -328,7 +357,7 @@ background-color: #082B2D;
 
  <div id="viewDiv"></div>
 
-
+<button id ="idbtotromap1" class="butn" onclick="nomostrar1()">Android 7</button>
 
   <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
 
@@ -354,8 +383,8 @@ document.getElementById("idbtrefres").style.display = "none";
 
    document.getElementById("idbtotromap").style.display ="none";
 
+     document.getElementById("idbtotromap1").style.display ="none";
 
-  
     </script>
    
 
