--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           -webkit-box-shadow: 5px 5px 15px 5px #20A4FF; 
 box-shadow: 5px 5px 15px 5px #20A4FF;
           font-family: Georgia, serif;
-          font-size: 10px;
+          font-size: 20px;
           letter-spacing: 2px;
           word-spacing: 2px;
           color: rgb(0, 204, 255);
@@ -341,7 +341,7 @@ background-color: #082B2D;
   <button id ="idbtinfo" class="butn" onclick="imprimir()">Guardar</button>
 <br><p></p><br>
     
-  <br><div id ="dividp" ></div><p id ="idp">This is some text in a paragraph.</p>
+  <br><div id ="dividp" ></div>
 
 <p id ="idpinforme">This is some text in a paragraph.</p>
 
@@ -356,7 +356,7 @@ background-color: #082B2D;
 
 
  <div id="viewDiv"></div>
-
+<p id ="idp">This is some text in a paragraph.</p>
 <button id ="idbtotromap1" class="butn" onclick="nomostrar1()">Volver</button>
 
   <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
