--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           -webkit-box-shadow: 5px 5px 15px 5px #20A4FF; 
 box-shadow: 5px 5px 15px 5px #20A4FF;
           font-family: Georgia, serif;
-          font-size: 20px;
+          font-size: 13px;
           letter-spacing: 2px;
           word-spacing: 2px;
           color: rgb(0, 204, 255);
@@ -54,41 +54,36 @@ box-shadow: 5px 5px 15px 5px #20A4FF;
 
 
       #idbtinfo {
-background-color:#44c767;
-  -moz-border-radius:28px;
-  -webkit-border-radius:28px;
-  border-radius:12px;
-  border:1px solid #18ab29;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff;
-  font-family:Arial;
-  font-size:17px;
-  padding:1px 1px;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #2f6627;
-  text-align: center;
+
   position: absolute;
   top: 380px;
   left: 10px;
   z-index: 300;
 
-  -webkit-box-shadow: -1px 20px 15px 5px rgba(0,0,0,0.78); 
-  box-shadow: -1px 20px 15px 5px rgba(0,0,0,0.78);
 
 
-  background-color: #FFFFFF;
-  color: #000000;
-  border: 4px solid #6D6D6D;
-  font-family: 'times new roman';
-  font-style: oblique;
-  font-weight: lighter;
-  font-size: 14px;
-
-
-width:4%; 
-
-
+   background: #40F66A;
+   background-image: -webkit-linear-gradient(top, #40F66A, #59D071);
+   background-image: -moz-linear-gradient(top, #40F66A, #59D071);
+   background-image: -ms-linear-gradient(top, #40F66A, #59D071);
+   background-image: -o-linear-gradient(top, #40F66A, #59D071);
+   background-image: linear-gradient(to bottom, #40F66A, #59D071);
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border-radius: 20px;
+   color: #FFFFFF;
+   font-family: Open Sans;
+   font-size: 32px;
+   font-weight: 100;
+   padding: 7px;
+   box-shadow: 1px 1px 20px 0px #000000;
+   -webkit-box-shadow: 1px 1px 20px 0px #000000;
+   -moz-box-shadow: 1px 1px 20px 0px #000000;
+   text-shadow: 1px 1px 20px #000000;
+   border: solid #337FED 1px;
+   text-decoration: none;
+   display: inline-block;
+   cursor: pointer;
 
 
 
@@ -96,27 +91,12 @@ width:4%;
 }
 
       #idbtrefres {
-background-color:#44c767;
-  -moz-border-radius:28px;
-  -webkit-border-radius:28px;
-  border-radius:12px;
-  border:1px solid #18ab29;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff;
-  font-family:Arial;
-  font-size:17px;
-  padding:1px 1px;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #2f6627;
-  text-align: center;
+
   position: absolute;
   top: 470px;
   left: 10px;
   z-index: 300;
 
-  -webkit-box-shadow: -1px 20px 15px 5px rgba(0,0,0,0.78); 
-  box-shadow: -1px 20px 15px 5px rgba(0,0,0,0.78);
 
     background-color: #FFFFFF;
   color: #000000;
@@ -126,7 +106,33 @@ background-color:#44c767;
   font-weight: lighter;
   font-size: 14px;
 
-  width:4%; 
+
+
+
+   background: #40F66A;
+   background-image: -webkit-linear-gradient(top, #40F66A, #59D071);
+   background-image: -moz-linear-gradient(top, #40F66A, #59D071);
+   background-image: -ms-linear-gradient(top, #40F66A, #59D071);
+   background-image: -o-linear-gradient(top, #40F66A, #59D071);
+   background-image: linear-gradient(to bottom, #40F66A, #59D071);
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border-radius: 20px;
+   color: #FFFFFF;
+   font-family: Open Sans;
+   font-size: 32px;
+   font-weight: 100;
+   padding: 7px;
+   box-shadow: 1px 1px 20px 0px #000000;
+   -webkit-box-shadow: 1px 1px 20px 0px #000000;
+   -moz-box-shadow: 1px 1px 20px 0px #000000;
+   text-shadow: 1px 1px 20px #000000;
+   border: solid #337FED 1px;
+   text-decoration: none;
+   display: inline-block;
+   cursor: pointer;
+
+
 }
 
 #idbtotromap{
@@ -140,22 +146,38 @@ background-color:#44c767;
 
   
 
-background-color:#44c767;
-  -moz-border-radius:28px;
-  -webkit-border-radius:28px;
-  border-radius:28px;
-  border:1px solid #18ab29;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff;
-  font-family:Arial;
-  font-size:17px;
-  padding:16px 31px;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #2f6627;
 
 
-width:4%; 
+
+
+   background: #40F66A;
+   background-image: -webkit-linear-gradient(top, #40F66A, #59D071);
+   background-image: -moz-linear-gradient(top, #40F66A, #59D071);
+   background-image: -ms-linear-gradient(top, #40F66A, #59D071);
+   background-image: -o-linear-gradient(top, #40F66A, #59D071);
+   background-image: linear-gradient(to bottom, #40F66A, #59D071);
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border-radius: 20px;
+   color: #FFFFFF;
+   font-family: Open Sans;
+   font-size: 32px;
+   font-weight: 100;
+   padding: 7px;
+   box-shadow: 1px 1px 20px 0px #000000;
+   -webkit-box-shadow: 1px 1px 20px 0px #000000;
+   -moz-box-shadow: 1px 1px 20px 0px #000000;
+   text-shadow: 1px 1px 20px #000000;
+   border: solid #337FED 1px;
+   text-decoration: none;
+   display: inline-block;
+   cursor: pointer;
+
+
+
+
+
+
 
 
 }
@@ -213,6 +235,10 @@ box-shadow: 5px 5px 15px 5px #20A4FF;
           opacity: 0.6;
     filter: alpha(opacity=60); /* For IE8 and earlier */
 top: 550px;
+
+
+
+
 
 
 }
