--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ box-shadow: 5px 5px 15px 5px #20A4FF;
    display: inline-block;
    cursor: pointer;
 
-
+width:70px;
 
 
 }
@@ -131,13 +131,13 @@ box-shadow: 5px 5px 15px 5px #20A4FF;
    text-decoration: none;
    display: inline-block;
    cursor: pointer;
-
+width:70px;
 
 }
 
 #idbtotromap{
 
-
+width: 5%;
   text-align: center;
   position: absolute;
   top: 210px;
