--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@ background-color: #082B2D;
 
 
          
-  <button id ="idbtotromap" class="butn" onclick="nomostrar()">Android 7</button>
+  <button id ="idbtotromap" class="butn" onclick="nomostrar()">3D</button>
 
  <button id ="idbtrefres" class="butn" onclick="activar2()">Buscar</button><br><br><br>
-  <button id ="idbtinfo" class="butn" onclick="imprimir()">Guardar</button>
+  <button id ="idbtinfo" class="butn" onclick="imprimir()">Pdf</button>
 <br><p></p><br>
     
   <br><div id ="dividp" ></div>
