--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ background-color: #082B2D;
 
  <div id="viewDiv"></div>
 <p id ="idp">This is some text in a paragraph.</p>
-<button id ="idbtotromap1" class="butn" onclick="nomostrar1()">Volver</button>
+<button id ="idbtotromap1" class="butn" onclick="nomostrar1()"><--</button>
 
   <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
 
