--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ box-shadow: 5px 5px 15px 5px #20A4FF;
 
 width:70px;
 
-
+font-weight:normal;color:#FFFFFF;letter-spacing:1pt;word-spacing:2pt;font-size:15px;text-align:left;font-family:arial, helvetica, sans-serif;line-height:1;
 }
 
       #idbtrefres {
@@ -133,11 +133,14 @@ width:70px;
    cursor: pointer;
 width:70px;
 
+font-weight:normal;color:#000000;letter-spacing:1pt;word-spacing:2pt;font-size:15px;text-align:left;font-family:arial, helvetica, sans-serif;line-height:1;
+
+
 }
 
 #idbtotromap{
 
-width: 5%;
+width:70px;
   text-align: center;
   position: absolute;
   top: 210px;
@@ -172,10 +175,7 @@ width: 5%;
    text-decoration: none;
    display: inline-block;
    cursor: pointer;
-
-
-
-
+font-weight:normal;color:#FFFFFF;letter-spacing:1pt;word-spacing:2pt;font-size:15px;text-align:left;font-family:arial, helvetica, sans-serif;line-height:1;
 
 
 
@@ -192,24 +192,34 @@ width: 5%;
   left: 10px;
   z-index: 3000;
 
-  
-
-background-color:#44c767;
-  -moz-border-radius:28px;
-  -webkit-border-radius:28px;
-  border-radius:28px;
-  border:1px solid #18ab29;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff;
-  font-family:Arial;
-  font-size:17px;
-  padding:16px 31px;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #2f6627;
+width:70px;
 
 
-width:4%; 
+   background: #40F66A;
+   background-image: -webkit-linear-gradient(top, #40F66A, #59D071);
+   background-image: -moz-linear-gradient(top, #40F66A, #59D071);
+   background-image: -ms-linear-gradient(top, #40F66A, #59D071);
+   background-image: -o-linear-gradient(top, #40F66A, #59D071);
+   background-image: linear-gradient(to bottom, #40F66A, #59D071);
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border-radius: 20px;
+   color: #FFFFFF;
+   font-family: Open Sans;
+   font-size: 32px;
+   font-weight: 100;
+   padding: 7px;
+   box-shadow: 1px 1px 20px 0px #000000;
+   -webkit-box-shadow: 1px 1px 20px 0px #000000;
+   -moz-box-shadow: 1px 1px 20px 0px #000000;
+   text-shadow: 1px 1px 20px #000000;
+   border: solid #337FED 1px;
+   text-decoration: none;
+   display: inline-block;
+   cursor: pointer;
+font-weight:normal;auno1003letter-spacing:1pt;word-spacing:2pt;font-size:15px;text-align:left;font-family:arial, helvetica, sans-serif;line-height:1;
+
+
 
 
 }
